--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -16,21 +16,29 @@
             <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
         </ul>
 
-        <div class="row" id="contentRow">
-            <div class="column">
-                <a href="galleryFotbal" id="hrefContent1">
-                    <img src="/images/football.jpg" alt="Football">
-                </a>
-                <div class="container">
-                    <h2><a href="galleryFotbal" id="hrefContent3">Fotbal</a></h2>
+        <br/>
+        <br/>
+        <br/>
+
+        <div class="row">
+            <div class="column" >
+                <div class="card">
+                    <a href="galleryFotbal">
+                        <img class="index" src="/images/football.jpg" alt="Football">
+                    </a>
+                    <div class="container">
+                        <h2><a href="galleryFotbal" id="hrefContent3">Fotbal</a></h2>
+                    </div>
                 </div>
             </div>
             <div class="column">
-                <a href="galleryTenis" id="hrefContent2">
-                    <img src="/images/tennis.jpg" alt="Tennis"  >
-                </a>
-                <div class="container">
-                    <h2><a href="galleryTenis" id="hrefContent4">Tenis</a></h2>
+                <div class="card">
+                    <a href="galleryTenis">
+                        <img class="index" src="/images/tennis.jpg" alt="Tennis"  >
+                    </a>
+                    <div class="container">
+                        <h2><a href="galleryTenis" id="hrefContent4">Tenis</a></h2>
+                    </div>
                 </div>
             </div>
         </div>
