--- a/src/main/resources/templates/galleryFotbal.html
+++ b/src/main/resources/templates/galleryFotbal.html
@@ -19,46 +19,47 @@
 
         </div>
         <p><a href="/templates/gallery.html"  th:href="@{/gallery}"><button>Back to gallery</button></a></p>
-        <div class="row" id="contentRow">
+        <div class="row" id="contentRowGallery">
             <div class="column" id="contentColumn1">
                 <img src="/images/FootballField1.jpg" alt="FootballField1" >
                 <div class="container">
-                    <h2>Teren 1</h2>
-                    <p>Sus pe Feleac va oferim o oportunitate unică ! Fotbal în mijlocul naturii într-o locație deosebită !</p>
+                    <h2>FootballField1</h2>
+                    <p>High up on Feleac we offer you a unique opportunity! Football in the middle of nature in a special location!</p>
                 </div>
             </div>
 
             <div class="column" id="contentColumn2">
                 <img src="/images/FootballField2.jpg" alt="FootballField2" >
                 <div class="container">
-                    <h2>Teren 2</h2>
-                    <p>Pentru o combinație perfectă de sport + ieșire în natură vă recomandăm terenul numărul 2 !
-                        Situat pe malul Someșului la doi pași de Aeroportul Cluj-Napoca acest teren este accesibil tuturor celor aleg o mișcare plăcută împreună cu prietenii după sfârșitul programului de muncă !</p>
+                    <h2>FootballField2</h2>
+                    <p>For a perfect combination of sports + nature outing, we recommend this playground!
+                        Located on the banks of the Someș, a stone's throw from Cluj-Napoca Airport, this playground is accessible to all those who choose a pleasant exercise with friends!</p>
                 </div>
             </div>
 
             <div class="column" id="contentColumn3">
                 <img src="/images/FootballField3.jpg" alt="FootballField3">
                 <div class="container">
-                    <h2>Teren 3</h2>
-                    <p>Situat pe drumul care leagă Cluj-Napoca de Turda acest teren vă oferă posibilitatea de a face sport într-un loc cu adevărat de vis !</p>
+                    <h2>FootballField3</h2>
+                    <p>Located on the road that connects Cluj-Napoca to Turda, this playground offers you the opportunity to do sports in a truly nice place!</p>
                 </div>
             </div>
-        <br><br><br>
+        </div>
+        <div class="row" id="contentRowGallery2">
             <div class="column" id="contentColumn4">
                 <img src="/images/FootballField4.jpg" alt="FootballField4" >
                 <div class="container">
-                    <h2>Teren 4</h2>
-                    <p>Vă invităm să descoperiți noul nostru teren amenajat pe lacul Gheorgheni ! Rezervați din timp. Este una dintre cele mai cerute locații !</p>
+                    <h2>FootballField4</h2>
+                    <p>We invite you to discover our new playground near Lake Gheorgheni! Book in advance. It is one of the most requested locations!</p>
                 </div>
             </div>
 
             <div class="column" id="contentColumn5">
                 <img src="/images/FootballField5.jpg" alt="FootballField5" >
                 <div class="container">
-                    <h2>Teren 5</h2>
-                    <p>Cel mai nou teren pe care il punem la dispoziția clienților noștri este și cel mai spectaculos ! Situat în zona Florești acest teren beneficiază de încălzire subterană astfel
-                        că fotbalul aici poate fi practicat indiferent de condițiile meteo !</p>
+                    <h2>FootballField5</h2>
+                    <p>The newest playground for our customers is also the most spectacular! Located in the Floresti area,
+                        this playground benefits from underground heating so football can be played here regardless of the weather conditions!</p>
                 </div>
             </div>
         </div>
