--- a/src/main/resources/templates/galleryTenis.html
+++ b/src/main/resources/templates/galleryTenis.html
@@ -18,29 +18,29 @@
 
          <p><a href="/templates/gallery.html"  th:href="@{/gallery}"><button>Back to gallery</button></a></p>
 
-        <div class="row" id="contentRow">
+        <div class="row" id="contentRowGallery">
             <div  class="column"  id="contentColumn1">
                 <img src="/images/TennisField1.jpg" alt="TennisField1" >
                 <div class="container">
-                    <h2>Teren 1</h2>
-                    <p>Terenul 1 este pentru relaxare, relaxare, relaxare ! Nici nu ar putea fi altfel dat fiind zona superbă care îl înconjoară !
-                        Situat în zona Făgetul Clujului acest teren vă așteaptă și pe timp de noapte având o nocturnă ultra-modernă instalată recent !</p>
+                    <h2>TennisField1</h2>
+                    <p>This playground is for relaxation, relaxation, relaxation! It couldn't be otherwise given the beautiful area that surrounds it!
+                        Located in the Făget Cluj area, this playground is waiting for you at night with recently installed ultra-modern lights!</p>
                 </div>
             </div>
 
             <div class="column" id="contentColumn2">
                 <img src="/images/TennisField2.jpg" alt="TennisField2">
                 <div class="container">
-                    <h2>Teren 2</h2>
-                    <p>Situat chiar în inima orașului Cluj-Napoca la doi pași de centru, în cadrul unui club exclusivist terenul numărul 2 este pentru cei care vor mai mult decăt o simplă oră de sport !</p>
+                    <h2>TennisField2</h2>
+                    <p>Located right in the heart of Cluj-Napoca, two steps from the center, in an exclusive playground, for those who want more from a than just an hour of sports!</p>
                 </div>
             </div>
 
             <div class="column" id="contentColumn3">
                 <img src="/images/TennisField3.jpg" alt="TennisField3">
                 <div class="container">
-                    <h2>Teren 3</h2>
-                    <p>Amenajat în vechea gară a orașului Cluj acest teren vă invită la o porție de mișcare și de istorie în același timp !</p>
+                    <h2>TennisField3</h2>
+                    <p>Situated in the old train station of Cluj, this playground invites you to take part in movement and history at the same time!</p>
                 </div>
             </div>
 
