added My Bookings in main menu, with option to delete bookings

--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -162,6 +162,12 @@ li a:hover {
   margin-bottom: 16px;
   padding: 0 8px;
 }
+.columnUserBooking {
+  float: left;
+  width: 15%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
