--- a/src/main/resources/templates/contact_form.html
+++ b/src/main/resources/templates/contact_form.html
@@ -14,6 +14,7 @@
             <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
             <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
             <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
+            <li><a  href="/templates/myBookings.html"  th:href="@{/myBookings}"> My Bookings</a></li>
         </ul>
            <form action="#" th:action="@{'/submitContact'}" method="post">
                <table border="0" class="contact">
