--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -14,6 +14,7 @@
             <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
             <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
             <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
+            <li><a  href="/templates/myBookings.html"  th:href="@{/myBookings}"> My Bookings</a></li>
         </ul>
         <h2 class="error-title" th:text="'Oops! Sorry, this page is not found.'"></h2>
         <h2 class="error-title" th:text="'Not to worry, you can head back to our home page to find what you are looking for.'"></h2>
