--- a/src/main/resources/templates/loginOrRegister.html
+++ b/src/main/resources/templates/loginOrRegister.html
@@ -15,6 +15,7 @@
             <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
             <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
             <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
+            <li><a  href="/templates/myBookings.html"  th:href="@{/myBookings}"> My Bookings</a></li>
         </ul>
         <p class ="loginOrRegister">
             <a th:href="@{'/selectPlayGround?sportName='+${sportName}+'&userID='+${userID}}"><button>Back to Playgrounds</button></a>
