--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -13,6 +13,7 @@
         <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
         <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
         <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
+        <li><a  href="/templates/myBookings.html"  th:href="@{/myBookings}"> My Bookings</a></li>
     </ul>
     <div class="myCenter">
         <h1>
