--- a/src/main/resources/templates/selectBookingHours.html
+++ b/src/main/resources/templates/selectBookingHours.html
@@ -27,12 +27,14 @@
                         <td>Date:</td>
                         <td><input type="date" th:field="*{bookingDate}"/></td>
                     </tr>
-                    <p>Available hours: [[${myHourAvailableList}]].</p>
-                    <p hidden>Please make booking one hour at a time.</p>
+                    <tr th:if="${myHourAvailableList.contains('No available hours')}">
+                        <td colspan="2">
+                            <p>No available hours</p>
+                        </td>
+                    </tr>
                     <tr>
                         <td>Time:</td>
                         <td><input type="time" name="limittime" list="limittimeslist" step="3600" th:field="*{{bookingHour}}"><small> Open 9am to 10pm. </small></td>
-<!--                        <td><input type="time" min="09:00" max="22:00" step=3600000 th:field="*{{bookingHour}}"/><small> Open 9am to 10pm. </small></td>-->
                     </tr>
                     <tr>
                         <td>Booking duration (h):</td>
@@ -45,22 +47,21 @@
                 </table>
             </form>
             <datalist id="limittimeslist">
-
-                <option value="09:00">
-                <option value="10:00">
-                <option value="11:00">
-                <option value="12:00">
-                <option value="13:00">
-                <option value="14:00">
-                <option value="15:00">
-                <option value="16:00">
-                <option value="17:00">
-                <option value="18:00">
-                <option value="19:00">
-                <option value="20:00">
-                <option value="21:00">
-                <option value="22:00">
-
+                <option th:if=${myHourAvailableList.contains('09:00')} value="09:00">
+                <option th:if=${myHourAvailableList.contains('10:00')} value="10:00">
+                <option th:if=${myHourAvailableList.contains('11:00')} value="11:00">
+                <option th:if=${myHourAvailableList.contains('12:00')} value="12:00">
+                <option th:if=${myHourAvailableList.contains('13:00')} value="13:00">
+                <option th:if=${myHourAvailableList.contains('14:00')} value="14:00">
+                <option th:if=${myHourAvailableList.contains('15:00')} value="15:00">
+                <option th:if=${myHourAvailableList.contains('16:00')} value="16:00">
+                <option th:if=${myHourAvailableList.contains('17:00')} value="17:00">
+                <option th:if=${myHourAvailableList.contains('18:00')} value="18:00">
+                <option th:if=${myHourAvailableList.contains('19:00')} value="19:00">
+                <option th:if=${myHourAvailableList.contains('20:00')} value="20:00">
+                <option th:if=${myHourAvailableList.contains('21:00')} value="21:00">
+                <option th:if=${myHourAvailableList.contains('22:00')} value="22:00">
+                <option th:if="${#lists.isEmpty(myHourAvailableList)}" value="No available hours">
             </datalist>
         </div>
     </body>
