--- a/src/main/resources/templates/userBookings.html
+++ b/src/main/resources/templates/userBookings.html
@@ -6,7 +6,7 @@
     <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
     <title>SportParkBooking - My Bookings</title>
 </head>
-<body>
+<body class="userBookings">
 <ul>
     <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
     <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
