--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -21,25 +21,71 @@
         <br/>
         <br/>
 
-        <div class="row">
-            <div class="column" >
-                <div class="card">
-                    <a href="galleryFotbal">
-                        <img class="index" src="/images/football.jpg" alt="Football">
-                    </a>
-                    <div class="container">
-                        <h2><a href="galleryFotbal" id="hrefContent3">Fotbal</a></h2>
-                    </div>
+        <div class="row" id="contentRowGallery">
+            <div class="column" id="contentColumn1">
+                <img src="/images/FootballField1.jpg" alt="FootballField1" >
+                <div class="container">
+                    <h2>FootballField1</h2>
+                    <p>High up on Feleac we offer you a unique opportunity! Football in the middle of nature in a special location!</p>
                 </div>
             </div>
-            <div class="column">
-                <div class="card">
-                    <a href="galleryTenis">
-                        <img class="index" src="/images/tennis.jpg" alt="Tennis"  >
-                    </a>
-                    <div class="container">
-                        <h2><a href="galleryTenis" id="hrefContent4">Tenis</a></h2>
-                    </div>
+
+            <div class="column" id="contentColumn2">
+                <img src="/images/FootballField2.jpg" alt="FootballField2" >
+                <div class="container">
+                    <h2>FootballField2</h2>
+                    <p>For a perfect combination of sports + nature outing, we recommend this playground!
+                        Located on the banks of the Someș, a stone's throw from Cluj-Napoca Airport, this playground is accessible to all those who choose a pleasant exercise with friends!</p>
+                </div>
+            </div>
+
+            <div class="column" id="contentColumn3">
+                <img src="/images/FootballField3.jpg" alt="FootballField3">
+                <div class="container">
+                    <h2>FootballField3</h2>
+                    <p>Located on the road that connects Cluj-Napoca to Turda, this playground offers you the opportunity to do sports in a truly nice place!</p>
+                </div>
+            </div>
+        </div>
+        <div class="row" id="contentRowGallery2">
+            <div class="column" id="contentColumn4">
+                <img src="/images/FootballField4.jpg" alt="FootballField4" >
+                <div class="container">
+                    <h2>FootballField4</h2>
+                    <p>We invite you to discover our new playground near Lake Gheorgheni! Book in advance. It is one of the most requested locations!</p>
+                </div>
+            </div>
+
+            <div class="column" id="contentColumn5">
+                <img src="/images/FootballField5.jpg" alt="FootballField5" >
+                <div class="container">
+                    <h2>FootballField5</h2>
+                    <p>The newest playground for our customers is also the most spectacular! Located in the Floresti area,
+                        this playground benefits from underground heating so football can be played here regardless of the weather conditions!</p>
+                </div>
+            </div>
+            <div  class="column"  id="contentColumn6">
+                <img src="/images/TennisField1.jpg" alt="TennisField1" >
+                <div class="container">
+                    <h2>TennisField1</h2>
+                    <p>This playground is for relaxation, relaxation, relaxation! It couldn't be otherwise given the beautiful area that surrounds it!
+                        Located in the Făget Cluj area, this playground is waiting for you at night with recently installed ultra-modern lights!</p>
+                </div>
+            </div>
+        </div>
+        <div class="row" id="contentRowGallery3">
+            <div class="column" id="contentColumn7">
+                <img src="/images/TennisField2.jpg" alt="TennisField2">
+                <div class="container">
+                    <h2>TennisField2</h2>
+                    <p>Located right in the heart of Cluj-Napoca, two steps from the center, in an exclusive playground, for those who want more from a than just an hour of sports!</p>
+                </div>
+            </div>
+            <div class="column" id="contentColumn8">
+                <img src="/images/TennisField3.jpg" alt="TennisField3">
+                <div class="container">
+                    <h2>TennisField3</h2>
+                    <p>Situated in the old train station of Cluj, this playground invites you to take part in movement and history at the same time!</p>
                 </div>
             </div>
         </div>
