changed error page > added link to homepage

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -18,8 +18,9 @@
         </ul>
         <h2 class="error-title" th:text="'Oops! Sorry, this page is not found.'"></h2>
         <h2 class="error-title" th:text="'Not to worry, you can head back to our home page to find what you are looking for.'"></h2>
-        <img src="/images/register.jpg"
-             th:attr="src=@{/images/error.jpg},title=#{ErrorPage},alt=#{ErrorPage}" />
+        <p> <a th:href="@{/home}" th:text="HomePage"/></p>
+       <img src="/images/error3.jpg"
+             th:attr="src=@{/images/error3.jpg},title=#{ErrorPage},alt=#{ErrorPage}" />
 
     </body>
 </html>
